# telegram-bot

./: .env.example  .gitignore  Dockerfile  admin.json  docker-compose.dev.yaml  docker-compose.yaml  makefile  parse.py  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
deploy/gunicorn/: gunicorn.conf.py  gunicorn.env
focussy/: urls.py
focussy/api/: admin.py  apps.py  models.py  urls.py  views.py
focussy/api/fastapi/: routes.py
focussy/api/management/commands/: converttasks.py  parsetasks.py
focussy/api/migrations/: 0001_initial.py  0002_subject_taskgroup_task_tasksolutionattempt.py  0002_task_correct_answer.py  0003_alter_tasknumber_name_alter_tasknumber_number.py  0003_test_testsolutionattempt_client_test_attempts_and_more.py  0004_alter_task_title.py  0004_remove_task_subject_tasknumber_subject.py  0005_alter_task_answers.py  0005_alter_task_task_number_delete_taskgroup.py  0006_alter_task_answers.py  0006_tasknumber_alter_task_task_number.py  0007_remove_test_tasks_test_tasks.py  0007_tasknumber_number.py  0008_task_task_type.py  0009_alter_client_options_alter_subject_options_and_more.py  0010_alter_task_task_type_alter_task_title.py  0011_testsolutionattempt_user_alter_task_task_type.py  0012_alter_testsolutionattempt_answers.py  0013_testsolutionattempt_rating.py  0014_remove_client_test_attempts.py  0015_alter_task_body.py
focussy/api/starlette/: routes.py
focussy/api/telegram/: adapters.py  bot.py  controllers.py  middleware.py  routers.py  states.py
focussy/api/telegram/dialogs/: main.py  profile.py  stat.py  task.py  task_config.py  test.py  tests.py
focussy/api/telegram/utils/: answer_validators.py  converters.py  (+1 more)
focussy/docs/: urls.py
focussy/users/: admin.py  apps.py
focussy/users/migrations/: 0001_initial.py
(+4 files in other folders)
