[tool.poetry]
name = "focussy"
version = "0.1.0"
description = ""
authors = ["mrmamongo <mrmamongo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.14.0"
aiogram = "^3.4.1"
redis = "^5.0.3"
aiogram-dialog = "^2.1.0"
drf-spectacular = "^0.27.1"
django-filter = "^24.1"
django-debug-toolbar = "^4.3.0"
django-loki = "^0.1.4"
psycopg2-binary = "^2.9.9"
django-cors-headers = "^4.3.1"
python-dotenv = "^1.0.1"
pillow = "^10.2.0"
django-better-admin-arrayfield = "^1.4.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
fake-useragent = "^1.5.1"
django-json-widget = "^1.1.1"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
anyio = "^4.3.0"
python-json-logger = "^2.0.7"
django-jazzmin = "^2.6.1"
dishka = "^0.8.0"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
fastapi = "^0.110.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
